# Kodiak

./: .gitignore  AGENTS.md  BLINK.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  NOTICE  PLAN-1.1.0.md  README.md  SECURITY.md  blink.toml  mypy-ci.ini  pyproject.toml
.claude/prompts/: create-strategies.md  curate-portfolio.md  discover-strategies.md  explore-backtesting.md  explore-opportunities.md  monitor-portfolio.md  portfolio-status.md  rebalance-portfolio.md  research-large-caps.md  research-sectors.md  review-daily-activity.md
.github/workflows/: ci.yml
contracts/: mcp-tools.v1.json  rest-openapi.v1.json
docs/: operator-onboarding.md
scripts/: analyze_timing_indicators.py  export_contracts.py  headless_smoke.py  import_fundamentals.py  list_mcp_tools.py  test_installation.py
skills/: SKILL.md
tests/cli/: test_cli.py
tests/core/: mocks.py  test_allocation.py  test_analysis_reports.py  test_app_services.py  test_audit.py  test_broker.py  test_config.py  test_data_quality.py  test_db_stores.py  test_engine_reconcile.py  test_errors.py  test_execution_model.py  test_fundamentals_ingest.py  test_ledger.py  test_logging.py  test_mock_broker.py  test_optimization_params.py  test_orders.py  test_policy.py  test_portfolio_analytics.py  test_portfolio_backtest.py  test_research_data.py  test_safety_pending_orders.py  test_schemas.py  test_trade_analysis.py
tests/integration/: test_cli_mcp_parity.py
tests/server/: test_contract_snapshots.py  test_headless_smoke.py  test_mcp_contract.py  test_mcp_limits.py  test_mcp_server.py  test_rest_api.py
(+8 files in other folders)
