[project]
name = "kodiak-workspace"
version = "2.0.0"
description = "Kodiak automated trading system - monorepo workspace"
authors = [
    {name = "Joe Caruso"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
ruff = "^0.3.0"
mypy = "^1.8.0"
types-requests = "^2.31.0"
types-pyyaml = "^6.0.0"
kodiak-core = {path = "packages/core", develop = true}
kodiak-cli = {path = "packages/cli", develop = true}
kodiak-server = {path = "packages/server", develop = true}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
